Some improvements & new page "Yüksel Aykut" added
.gitignore modified. New page added into the the navigation menu on existing pages (home and contact) and the new page as well.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <summary role="button" class="primary">MENÜ</summary>
             <ul dir="rtl">
               <li><a href="/" aria-current="page" class="secondary">Anasayfa</a></li>
+              <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
               <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
               <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
               <li><a href="/iletisim" class="secondary">İletişim</a></li>
