--- a/yuksel-aykut.html
+++ b/yuksel-aykut.html
@@ -8,8 +8,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="Yüksel Aykut - Seferihisar Elektrikçi" />
   <meta name="description"
-    content="Acil ve hızlı servis, aydınlatma çözümleri, güvenlik kamerası kurulumu, akıllı ev uygulamaları ve daha fazlası için profesyonel elektrikçi hizmetleri." />
+    content="26 yıllık tecrübe ile elektrik iç tesisat uygulama hizmetleri. Akıllı ev ve diğer elektrikçi ihtiyaçlarınız için Seferihisar ve çevresinde güvenilir çözüm ortağınız." />
 
   <!-- -------------------------------------------------------------------- -->
   <!-- FAVICON -------------------------------------------------------------- -->
@@ -23,7 +24,7 @@
   <!-- -------------------------------------------------------------------- -->
   <!-- TITLE -------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
-  <title>İletişim - Seferihisar Elektrikçi Yüksel</title>
+  <title>Yüksel Aykut - Seferihisar Elektrikçi</title>
 
   <!-- -------------------------------------------------------------------- -->
   <!-- STATIC LIBRARIES --------------------------------------------------- -->
@@ -61,10 +62,10 @@
             <summary role="button" class="primary">MENÜ</summary>
             <ul dir="rtl">
               <li><a href="/" class="secondary">Anasayfa</a></li>
-              <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
+              <li><a href="/yuksel-aykut" aria-current="page" class="secondary">Yüksel Aykut</a></li>
               <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
               <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
-              <li><a href="/iletisim" aria-current="page" class="secondary">İletişim</a></li>
+              <li><a href="/iletisim" class="secondary">İletişim</a></li>
             </ul>
           </details>
         </li>
@@ -74,6 +75,7 @@
 
   <main>
 
+
     <!-- -------------------------------------------------------------------- -->
     <!-- HERO SECTION ------------------------------------------------------- -->
     <!-- -------------------------------------------------------------------- -->
@@ -81,24 +83,15 @@
       <article>
         <header>
           <div class="container padding-top-2 padding-bottom-1">
-            <h1>İletişim</h1>
+            <h1>Yüksel Aykut</h1>
           </div>
-          <p class="container padding-top-1"><em>Kablolu akıllı ev kurulumu uzmanlığı</em> başta olmak üzere her türlü
-            elektrikçi ihtiyaçlarınızda
-            Yüksel usta ile iletişime geçmek için aşağıdaki telefon ve mail adresini kullanabilirsiniz.</p>
         </header>
         <div class="container padding-top-1">
-          <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Usta Akıllı Ev Sistemleri YouTube"
-            class="secondary" target="_blank">Yüksel Usta YouTube</a>
-          <hr>
-          <a href="tel:05538665764" title="Telefon" class="secondary">+90 553 866 5764</a>
-          <hr>
-          <a href="mailto:yukselaykut37@gmail.com" title="Email Adresi" class="secondary">yukselaykut37@gmail.com</a>
-          <hr>
-          <address>Tepecik Mahallesi, 108. Sk. No:24/1 35460 Seferihisar/İzmir</address>
-          <hr>
-          <p>Çalışma Saatleri: 08<sup>00</sup> - 22<sup>00</sup></p>
+          <p>Yaklaşık 26 yılı geride bırakmış bir elektrik iç tesisat uygulamacısı
+            olarak hizmet vermekteyim. 2022'den beri İzmi'in
+            Seferihisar ve çevre ilçelerinde hizmet veriyorum.</p>
         </div>
+
         <footer class="padding-vertical-1">
           <div class="container"><a href="tel:05538665764" role="button" class="contrast">BİZİ ARAYIN</a>&nbsp;&nbsp;<a
               href="https://wa.me/905538665764" role="button" class="pico-background-jade-500">WHATSAPP</a>
