Contact page added, index page updated.
- YouTube link added to the footer
- Contact page created without a form
- Contact page linked in the navigation bar

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <summary role="button" class="primary">MENÜ</summary>
             <ul dir="rtl">
               <li><a href="/" aria-current="page" class="secondary">Anasayfa</a></li>
-              <li><a href="#bolgeler" class="secondary">Bölgeler</a></li>
-              <li><a href="#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
-              <li><a href="#iletisim" class="secondary">İletişim</a></li>
+              <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
+              <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
+              <li><a href="/iletisim" class="secondary">İletişim</a></li>
             </ul>
           </details>
         </li>
@@ -548,15 +548,18 @@
         izleyen uzman ekibimizle, konutlardan işletmelere uzanan geniş bir yelpazede kapsamlı elektrik çözümleri
         sağlıyoruz.</p>
     </section>
-    <section id="iletisim">
-      <address>Tepecik Mahallesi, 108. Sk. No:24/1 35460 Seferihisar/İzmir</address>
+    <section>
+      <hr>
+      <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Usta Akıllı Ev Sistemleri YouTube"
+        class="secondary" target="_blank">Yüksel Usta YouTube</a>
       <hr>
       <a href="tel:05538665764" title="Telefon" class="secondary">+90 553 866 5764</a>
       <hr>
       <a href="mailto:yukselaykut37@gmail.com" title="Email Adresi" class="secondary">yukselaykut37@gmail.com</a>
       <hr>
+      <address>Tepecik Mahallesi, 108. Sk. No:24/1 35460 Seferihisar/İzmir</address>
+      <hr>
       <p>Çalışma Saatleri: 08<sup>00</sup> - 22<sup>00</sup></p>
-
     </section>
   </footer>
   <hr>
