/yuksel-aykut (about) page updated
Content of the about page updated.

--- a/yuksel-aykut.html
+++ b/yuksel-aykut.html
@@ -87,9 +87,8 @@
           </div>
         </header>
         <div class="container padding-top-1">
-          <p>Yaklaşık 26 yılı geride bırakmış bir elektrik iç tesisat uygulamacısı
-            olarak hizmet vermekteyim. 2022'den beri İzmi'in
-            Seferihisar ve çevre ilçelerinde hizmet veriyorum.</p>
+          <p>Yaklaşık 26 yılı geride bırakmış bir elektrik iç tesisat uygulamacısı olarak hizmet vermekteyim. 2022'den
+            beri İzmir'in Seferihisar ve çevre ilçelerinde faaliyet gösteriyorum.</p>
         </div>
 
         <footer class="padding-vertical-1">
@@ -98,6 +97,141 @@
           </div>
         </footer>
       </article>
+    </section>
+
+    <!-- -------------------------------------------------------------------- -->
+    <!-- HİZMETLER & DENEYİM ------------------------------------------------ -->
+    <!-- -------------------------------------------------------------------- -->
+    <section id="hizmetlerimiz" class="container">
+      <h2>Hizmetler</h2>
+      <table role="grid">
+        <thead>
+          <tr>
+            <th>Kategori</th>
+            <th>Açıklama</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><strong>Elektrik İç Tesisat</strong></td>
+            <td>Elektrik İç Tesisat Yönetmeliği standartlarına uygun <em>konvansiyonel</em> uygulamalar &mdash; marka
+              bağımsız çözüm.</td>
+          </tr>
+          <tr>
+            <td><strong>Akıllı Ev Sistemleri</strong></td>
+            <td>Avrupa standartlarında <abbr title="Konnex">KNX</abbr> kablolu protokol ile akıllı ev projeleri.</td>
+          </tr>
+          <tr>
+            <td><strong>Görüntüleme Sistemleri</strong></td>
+            <td>Analog/IP kamera, apartman konuşma ve uydu üzerinden görüntüleme çözümleri.</td>
+          </tr>
+          <tr>
+            <td><strong>Alarm &amp; İhbar</strong></td>
+            <td>Kablolu yangın ihbar ve hırsız alarm sistemleri.</td>
+          </tr>
+          <tr>
+            <td><strong>Network (DATA) Altyapı</strong></td>
+            <td>Sunucu dâhil fiber‑optik ve bakır kablolama ile kurumsal ağ altyapıları.</td>
+          </tr>
+          <tr>
+            <td><strong>Malzeme Tedariği</strong></td>
+            <td>Tüm markalar; acil durumlarda aynı gün &mdash; en geç 2. iş gününde teslimat.</td>
+          </tr>
+          <tr>
+            <td><strong>İşçilik Garantisi</strong></td>
+            <td>Yapılacak işe göre <strong>6&nbsp;ay&nbsp;&ndash;&nbsp;1&nbsp;yıl</strong> işçilik garantisi (özel
+              işçiliklerde kapsam değişebilir).</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <h3>Hizmet Yaklaşımımız</h3>
+      <ul>
+        <li><strong>Öncelik:</strong> İnsan güvenliği, ardından fiyat‑performans dengesi.</li>
+        <li><strong>Referans Odaklı:</strong> Tüm projeler geçmiş müşteri memnuniyeti ile şekillenir.</li>
+        <li><strong>Bölge:</strong> Urla, Güzelbahçe, Yelki, Gümüldür ve çevresi (Çeşme hariç).</li>
+      </ul>
+    </section>
+
+    <!-- -------------------------------------------------------------------- -->
+    <!-- GÜNCEL PROJELER ---------------------------------------------------- -->
+    <!-- -------------------------------------------------------------------- -->
+    <section class="container">
+      <h2>Seçili Projeler <small>(2023&nbsp;&ndash;&nbsp;2025)</small></h2>
+      <table role="grid">
+        <thead>
+          <tr>
+            <th>Proje</th>
+            <th>Yer / Kapsam</th>
+            <th>Durum</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Denizyay Konut Projesi</td>
+            <td>Seferihisar, İzmir &mdash; Blok&nbsp;A: 9 konut • Blok&nbsp;B: 6 konut + 3 ticari</td>
+            <td><span class="pico-background-green-600 pico-color-white"
+                style="padding:0.1rem 0.4rem;border-radius:4px;">Tamamlandı</span></td>
+          </tr>
+          <tr>
+            <td>KNX Akıllı Ev Projesi</td>
+            <td>Bademler, Urla &mdash; Müstakil 4&nbsp;+&nbsp;1 dubleks</td>
+            <td><span class="pico-background-amber-600 pico-color-white"
+                style="padding:0.1rem 0.4rem;border-radius:4px;">Devam Ediyor</span></td>
+          </tr>
+          <tr>
+            <td>Ergün İnşaat</td>
+            <td>Güzelbahçe/Yelki &mdash; 16 konut + 2 ticari, KNX tabanlı</td>
+            <td><span class="pico-background-amber-600 pico-color-white"
+                style="padding:0.1rem 0.4rem;border-radius:4px;">Devam Ediyor</span></td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <!-- -------------------------------------------------------------------- -->
+    <!-- ÖNCEKİ PROJELER (ACCORDION) --------------------------------------- -->
+    <!-- -------------------------------------------------------------------- -->
+    <section class="container">
+      <h2>Önceki Projeler <small>(2008&nbsp;&ndash;&nbsp;2023)</small></h2>
+      <details>
+        <summary class="secondary">Acar Yapı İnşaat (İstanbul)</summary>
+        <ul>
+          <li>Beykonakları, Beylikdüzü — 77 daire</li>
+          <li>LifePlus Şerifali, Ümraniye — 45 daire</li>
+          <li>Acar Plaza, Ümraniye — Ticari</li>
+          <li>New Loca İstanbul, Ümraniye/Çakmak — 233 daire + 15 ticari</li>
+        </ul>
+      </details>
+      <details>
+        <summary class="secondary">ER‑AY Elektrik (Kurucu Ortak, 2016‑2023)</summary>
+        <ul>
+          <li>Mavrova Residence, Küçükçekmece — 60 daire + 4 ticari</li>
+          <li>Sarıgül Konakları — 48 daire</li>
+          <li>Ötüken Residence — 63 daire</li>
+        </ul>
+      </details>
+      <details>
+        <summary class="secondary">Kare Mimarlık &amp; Mühendislik</summary>
+        <ul>
+          <li>Address Güneşi, Güneşli — 80 konut</li>
+          <li>Koçak Konutları, Mahmutbey — 45 konut</li>
+        </ul>
+      </details>
+    </section>
+
+    <!-- -------------------------------------------------------------------- -->
+    <!-- MESLEKİ ARKA PLAN -------------------------------------------------- -->
+    <!-- -------------------------------------------------------------------- -->
+    <section class="container">
+      <h2>Mesleki Arka Plan</h2>
+      <p>1998’de İstanbul’da başladığım meslek hayatımda, 2006’ya kadar çeşitli firmalarda farklı projelerde çalışarak
+        deneyim kazandım. 2008’den itibaren sahada <strong>bağımsız</strong> olarak, “önce etik ve dürüstlük” ilkesini
+        benimseyerek hizmet vermeye devam ettim.</p>
+      <p>2016’da kurucu ortağı olduğum <strong>ER‑AY Elektrik</strong> ile 2023’e kadar çok sayıda orta ve büyük ölçekli
+        konut/ticari projeyi başarıyla tamamladım.</p>
+      <p>Hâlen İzmir Urla merkezli olarak konvansiyonel elektrik tesisatı, KNX tabanlı akıllı ev sistemleri ve zayıf
+        akım çözümlerinde proje bazlı hizmet sunmaktayım.</p>
     </section>
 
     <!-- -------------------------------------------------------------------- -->
@@ -144,9 +278,7 @@
         })();
       </script>
     </section>
-
   </main>
-
   <footer class="container flex-3">
     <!-- -------------------------------------------------------------------- -->
     <!-- FOOTER ------------------------------------------------------------- -->
