Rebranded to "Seferihisar Elektrikçi Yüksel Aykut" & The header update
- Rebranded to "Seferihisar Elektrikçi Yüksel Aykut" in the HTML files and updated the header text accordingly.
- The header design updated to nowrap design of the logo and the menu
- About page content /yuksel-aykut finished

--- a/iletisim.html
+++ b/iletisim.html
@@ -23,7 +23,7 @@
   <!-- -------------------------------------------------------------------- -->
   <!-- TITLE -------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
-  <title>İletişim - Seferihisar Elektrikçi Yüksel</title>
+  <title>İletişim - Seferihisar Elektrikçi Yüksel Aykut</title>
 
   <!-- -------------------------------------------------------------------- -->
   <!-- STATIC LIBRARIES --------------------------------------------------- -->
@@ -44,31 +44,25 @@
   <!-- HEADER & NAVIGATION ------------------------------------------------ -->
   <!-- -------------------------------------------------------------------- -->
   <header class="container">
-    <nav>
+    <nav class="navbar-inline">
 
       <!-- Logo -->
       <a href="/">
-        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg" alt="Güven Elektrikçi Logo" height="90"
-          width="240" />
+        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg"
+          alt="Seferihisar Elektrikçi Yüksel Aykut Logo" height="90" width="240" class="logo" />
       </a>
 
       <!-- Header Menu -->
-      <ul>
-
-        <!-- Toggle Hamburger Menu Icon (visible only tablet & mobile) -->
-        <li>
-          <details class="dropdown">
-            <summary role="button" class="primary">MENÜ</summary>
-            <ul dir="rtl">
-              <li><a href="/" class="secondary">Anasayfa</a></li>
-              <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
-              <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
-              <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
-              <li><a href="/iletisim" aria-current="page" class="secondary">İletişim</a></li>
-            </ul>
-          </details>
-        </li>
-      </ul>
+      <details class="dropdown">
+        <summary role="button" class="primary nowrap">MENÜ</summary>
+        <ul dir="rtl">
+          <li><a href="/" class="secondary">Anasayfa</a></li>
+          <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
+          <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
+          <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
+          <li><a href="/iletisim" class="secondary" aria-current="page">İletişim</a></li>
+        </ul>
+      </details>
     </nav>
   </header>
 
@@ -85,11 +79,11 @@
           </div>
           <p class="container padding-top-1"><em>Kablolu akıllı ev kurulumu uzmanlığı</em> başta olmak üzere her türlü
             elektrikçi ihtiyaçlarınızda
-            Yüksel usta ile iletişime geçmek için aşağıdaki telefon ve mail adresini kullanabilirsiniz.</p>
+            Yüksel Aykut ile iletişime geçmek için aşağıdaki telefon ve mail adresini kullanabilirsiniz.</p>
         </header>
         <div class="container padding-top-1">
-          <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Usta Akıllı Ev Sistemleri YouTube"
-            class="secondary" target="_blank">Yüksel Usta YouTube</a>
+          <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Aykut - Akıllı Ev Sistemleri YouTube"
+            class="secondary" target="_blank">Yüksel Aykut YouTube</a>
           <hr>
           <a href="tel:05538665764" title="Telefon" class="secondary">+90 553 866 5764</a>
           <hr>
@@ -159,14 +153,14 @@
     <!-- FOOTER ------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------------- -->
     <section>
-      <h2 class="padding-bottom-2">Seferihisar Elektrikçi Yüksel</h2>
+      <h2 class="padding-bottom-2">Seferihisar Elektrikçi Yüksel Aykut</h2>
       <a href="/">
-        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg" alt="Seferihisar Elektrikçi Yüksel Logo"
-          height="90" width="240" />
+        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg"
+          alt="Seferihisar Elektrikçi Yüksel Aykut Logo" height="90" width="240" />
       </a>
     </section>
     <section>
-      <p>Seferihisar’da Elektrikçi Yüksel olarak önceliğimiz daima güvenilir ve kaliteli hizmet sunmak.
+      <p>Seferihisar’da Elektrikçi Yüksel Aykut olarak önceliğimiz daima güvenilir ve kaliteli hizmet sunmak.
       </p>
       <p>
         Teknolojiyi
@@ -177,7 +171,7 @@
     <section>
       <hr>
       <a href="https://www.youtube.com/@seferihisaryukselusta" title="Yüksel Usta Akıllı Ev Sistemleri YouTube"
-        class="secondary" target="_blank">Yüksel Usta YouTube</a>
+        class="secondary" target="_blank">Yüksel Aykut YouTube</a>
       <hr>
       <a href="tel:05538665764" title="Telefon" class="secondary">+90 553 866 5764</a>
       <hr>
@@ -192,7 +186,7 @@
   <div class="text-align-center padding-vertical-1">
     <small>© <span id="year"></span>
       Seferihisar
-      Elektrikçi Yüksel - Tüm hakları saklıdır</small>
+      Elektrikçi Yüksel Aykut - Tüm hakları saklıdır</small>
   </div>
 
   <!-- -------------------------------------------------------------------- -->
