--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- -------------------------------------------------------------------- -->
   <!-- TITLE -------------------------------------------------------------- -->
   <!-- -------------------------------------------------------------------- -->
-  <title>Seferihisar Elektrikçi Yüksel</title>
+  <title>Seferihisar Elektrikçi Yüksel Aykut</title>
 
   <!-- -------------------------------------------------------------------- -->
   <!-- STATIC LIBRARIES --------------------------------------------------- -->
@@ -44,31 +44,25 @@
   <!-- HEADER & NAVIGATION ------------------------------------------------ -->
   <!-- -------------------------------------------------------------------- -->
   <header class="container">
-    <nav>
+    <nav class="navbar-inline">
 
       <!-- Logo -->
       <a href="/">
-        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg" alt="Güven Elektrikçi Logo" height="90"
-          width="240" />
+        <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg"
+          alt="Seferihisar Elektrikçi Yüksel Aykut Logo" height="90" width="240" class="logo" />
       </a>
 
       <!-- Header Menu -->
-      <ul>
-
-        <!-- Toggle Hamburger Menu Icon (visible only tablet & mobile) -->
-        <li>
-          <details class="dropdown">
-            <summary role="button" class="primary">MENÜ</summary>
-            <ul dir="rtl">
-              <li><a href="/" aria-current="page" class="secondary">Anasayfa</a></li>
-              <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
-              <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
-              <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
-              <li><a href="/iletisim" class="secondary">İletişim</a></li>
-            </ul>
-          </details>
-        </li>
-      </ul>
+      <details class="dropdown">
+        <summary role="button" class="primary nowrap">MENÜ</summary>
+        <ul dir="rtl">
+          <li><a href="/" class="secondary" aria-current="page">Anasayfa</a></li>
+          <li><a href="/yuksel-aykut" class="secondary">Yüksel Aykut</a></li>
+          <li><a href="/#bolgeler" class="secondary">Bölgeler</a></li>
+          <li><a href="/#hizmetlerimiz" class="secondary">Hizmetlerimiz</a></li>
+          <li><a href="/iletisim" class="secondary">İletişim</a></li>
+        </ul>
+      </details>
     </nav>
   </header>
 
@@ -81,11 +75,12 @@
       <article>
         <header>
           <div class="container padding-top-2 padding-bottom-1">
-            <h1>Seferihisar Elektrikçi Yüksel</h1>
+            <h1>Seferihisar Elektrikçi Yüksel Aykut</h1>
           </div>
         </header>
         <div class="container padding-top-1">
-          <p>Seferihisar’da Elektrikçi Yüksel olarak önceliğimiz daima güvenilir ve kaliteli hizmet sunmak. Teknolojiyi
+          <p>Seferihisar’da Elektrikçi Yüksel Aykut olarak önceliğimiz daima güvenilir ve kaliteli hizmet sunmak.
+            Teknolojiyi
             yakından
             izleyen uzman ekibimizle, konutlardan işletmelere uzanan geniş bir yelpazede kapsamlı elektrikçi çözümleri
             sağlıyoruz.
@@ -534,14 +529,14 @@
     <!-- FOOTER ------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------------- -->
     <section>
-      <h2 class="padding-bottom-2">Seferihisar Elektrikçi Yüksel</h2>
+      <h2 class="padding-bottom-2">Seferihisar Elektrikçi Yüksel Aykut</h2>
       <a href="/">
         <img src="img/brand/logo-transparent-seferihisar-elektrikci-yuksel.svg" alt="Seferihisar Elektrikçi Yüksel Logo"
           height="90" width="240" />
       </a>
     </section>
     <section>
-      <p>Seferihisar’da Elektrikçi Yüksel olarak önceliğimiz daima güvenilir ve kaliteli hizmet sunmak.
+      <p>Seferihisar’da Elektrikçi Yüksel Aykut olarak önceliğimiz daima güvenilir ve kaliteli hizmet sunmak.
       </p>
       <p>
         Teknolojiyi
@@ -567,7 +562,7 @@
   <div class="text-align-center padding-vertical-1">
     <small>© <span id="year"></span>
       Seferihisar
-      Elektrikçi Yüksel - Tüm hakları saklıdır</small>
+      Elektrikçi Yüksel Aykut - Tüm hakları saklıdır</small>
   </div>
 
   <!-- -------------------------------------------------------------------- -->
